rust/schema/tests/snapshots/patch__change-code-chunk-code.snap
---
source: rust/schema/tests/patch.rs
expression: "Fixture { old, new, ops, merged }"
---
old:
  type: Article
  authors:
    - type: AuthorRole
      author:
        type: Person
        givenNames:
          - Alice
      roleName: Importer
  content:
    - type: CodeChunk
      code:
        string: 1 + 2
        authorship:
          - - 0
            - 5
      programmingLanguage: python
      authors:
        - type: AuthorRole
          author:
            type: Person
            givenNames:
              - Alice
          roleName: Importer
new:
  type: Article
  content:
    - type: CodeChunk
      code: 1 + 3
      programmingLanguage: python
merged:
  type: Article
  authors:
    - type: AuthorRole
      author:
        type: Person
        givenNames:
          - Alice
      roleName: Importer
    - type: AuthorRole
      author:
        type: Person
        givenNames:
          - Bob
      roleName: Writer
  content:
    - type: CodeChunk
      code:
        string: 1 + 3
        authorship:
          - - 0
            - 4
          - - 1
            - 1
      programmingLanguage: python
      authors:
        - type: AuthorRole
          author:
            type: Person
            givenNames:
              - Alice
          roleName: Importer
        - type: AuthorRole
          author:
            type: Person
            givenNames:
              - Bob
          roleName: Writer
ops:
  - - - content
      - 0
      - code
    - Apply:
        - Replace:
            - start: 4
              end: 5
            - "3"
