rust/schema/tests/snapshots/patch__delete-code-chunk.snap
---
source: rust/schema/tests/patch.rs
expression: "Fixture { old, new, ops, authors_before, authors_after }"
---
old:
  type: Article
  content:
    - type: Paragraph
      content:
        - type: Text
          value: para1
    - type: CodeChunk
      code: 1 + 2
      programmingLanguage: python
    - type: Paragraph
      content:
        - type: Text
          value: para2
new:
  type: Article
  content:
    - type: Paragraph
      content:
        - type: Text
          value: para1
    - type: Paragraph
      content:
        - type: Text
          value: para2
ops:
  - - - content
    - Remove:
        - 1
authors_before: 3
authors_after: 2
