rust/schema/tests/snapshots/patch__delete-one-paragraph.snap
---
source: rust/schema/tests/patch.rs
expression: "Fixture { old, new, ops, merged }"
---
old:
  type: Article
  authors:
    - type: AuthorRole
      author:
        type: Person
        givenNames:
          - Alice
      roleName: Importer
  content:
    - type: Paragraph
      content:
        - type: Text
          value:
            string: para1
            authorship:
              - - 0
                - 5
      authors:
        - type: AuthorRole
          author:
            type: Person
            givenNames:
              - Alice
          roleName: Importer
    - type: Paragraph
      content:
        - type: Text
          value:
            string: para2
            authorship:
              - - 0
                - 5
      authors:
        - type: AuthorRole
          author:
            type: Person
            givenNames:
              - Alice
          roleName: Importer
    - type: Paragraph
      content:
        - type: Text
          value:
            string: para3
            authorship:
              - - 0
                - 5
      authors:
        - type: AuthorRole
          author:
            type: Person
            givenNames:
              - Alice
          roleName: Importer
new:
  type: Article
  content:
    - type: Paragraph
      content:
        - type: Text
          value: para1
    - type: Paragraph
      content:
        - type: Text
          value: para3
merged:
  type: Article
  authors:
    - type: AuthorRole
      author:
        type: Person
        givenNames:
          - Alice
      roleName: Importer
    - type: AuthorRole
      author:
        type: Person
        givenNames:
          - Bob
      roleName: Writer
  content:
    - type: Paragraph
      content:
        - type: Text
          value:
            string: para1
            authorship:
              - - 0
                - 5
      authors:
        - type: AuthorRole
          author:
            type: Person
            givenNames:
              - Alice
          roleName: Importer
    - type: Paragraph
      content:
        - type: Text
          value:
            string: para3
            authorship:
              - - 0
                - 5
      authors:
        - type: AuthorRole
          author:
            type: Person
            givenNames:
              - Alice
          roleName: Importer
ops:
  - - - content
    - Remove:
        - 1
