rust/schema/tests/snapshots/patch__paragraph-copy-one.snap
---
source: rust/schema/tests/patch.rs
expression: "Fixture { old, new, ops: patch.ops, merged }"
---
old:
  type: Article
  authors:
    - type: AuthorRole
      author:
        type: Person
        givenNames:
          - Alice
      roleName: Importer
  content:
    - type: Paragraph
      content:
        - type: Text
          value:
            string: para1
            authorship:
              - - 1
                - 0
                - 0
                - 5
      authors:
        - type: AuthorRole
          author:
            type: Person
            givenNames:
              - Alice
          roleName: Importer
    - type: Paragraph
      content:
        - type: Text
          value:
            string: para2
            authorship:
              - - 1
                - 0
                - 0
                - 5
      authors:
        - type: AuthorRole
          author:
            type: Person
            givenNames:
              - Alice
          roleName: Importer
    - type: Paragraph
      content:
        - type: Text
          value:
            string: para3
            authorship:
              - - 1
                - 0
                - 0
                - 5
      authors:
        - type: AuthorRole
          author:
            type: Person
            givenNames:
              - Alice
          roleName: Importer
new:
  type: Article
  content:
    - type: Paragraph
      content:
        - type: Text
          value: para1
    - type: Paragraph
      content:
        - type: Text
          value: para2
    - type: Paragraph
      content:
        - type: Text
          value: para2
    - type: Paragraph
      content:
        - type: Text
          value: para3
merged:
  type: Article
  authors:
    - type: AuthorRole
      author:
        type: Person
        givenNames:
          - Alice
      roleName: Importer
    - type: AuthorRole
      author:
        type: Person
        givenNames:
          - Bob
      roleName: Writer
  content:
    - type: Paragraph
      content:
        - type: Text
          value:
            string: para1
            authorship:
              - - 1
                - 0
                - 0
                - 5
      authors:
        - type: AuthorRole
          author:
            type: Person
            givenNames:
              - Alice
          roleName: Importer
    - type: Paragraph
      content:
        - type: Text
          value:
            string: para2
            authorship:
              - - 1
                - 0
                - 0
                - 5
      authors:
        - type: AuthorRole
          author:
            type: Person
            givenNames:
              - Alice
          roleName: Importer
    - type: Paragraph
      content:
        - type: Text
          value:
            string: para2
            authorship:
              - - 1
                - 0
                - 0
                - 5
      authors:
        - type: AuthorRole
          author:
            type: Person
            givenNames:
              - Alice
          roleName: Importer
    - type: Paragraph
      content:
        - type: Text
          value:
            string: para3
            authorship:
              - - 1
                - 0
                - 0
                - 5
      authors:
        - type: AuthorRole
          author:
            type: Person
            givenNames:
              - Alice
          roleName: Importer
ops:
  - - - content
    - Copy:
        1:
          - 2
